<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/titleBox"
        android:textSize="25sp"
        android:gravity="start|center_vertical"
        android:hint="@string/title_box_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/contentBox"
        android:gravity="start|top"
        android:hint="@string/content_box_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:backgroundTint="@color/secondary"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:backgroundTint="@color/primary"/>

    </LinearLayout>

</LinearLayout>