<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/completedCheckbox"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleX="1.5"
            android:scaleY="1.5"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/titleBox"
            android:textSize="25sp"
            android:gravity="start|center_vertical"
            android:hint="@string/task_title_box_hint"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/contentBox"
        android:gravity="start|top"
        android:hint="@string/task_note_box_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dateSelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@android:color/transparent"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp"
            android:text="@string/empty_date_selector"
            android:textColor="@color/primary"/>
        <Button
            android:id="@+id/timeSelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@android:color/transparent"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp"
            android:text="@string/empty_time_selector"
            android:textColor="@color/primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:backgroundTint="@color/secondary"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:backgroundTint="@color/primary"/>
    </LinearLayout>

</LinearLayout>